--- a/public/index.html
+++ b/public/index.html
@@ -1915,26 +1915,6 @@
       />
     </qc-textfield>
 
-    <div class="qc-formfield-row">
-      <qc-textfield
-              label="Téléphone"
-              size="sm"
-              required
-        ><input type="text"
-                name="telephone"
-                placeholder="(123) 456-7890"
-      /></qc-textfield>
-
-      <qc-textfield
-              label="Poste"
-              size="xs"
-      >
-        <input type="text"
-               name="poste"
-        />
-      </qc-textfield>
-    </div>
-
     <qc-textfield
             label="Champ de texte multiligne"
             description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
@@ -2384,7 +2364,7 @@
     <qc-select id="qc-select-single-choice">
         <label for="select-single-choice">Choix unique</label>
         <select id="select-single-choice">
-            <option value="" selected>Choisissez une option</option>
+            <option value="" selected>Faire une sélection</option>
             <option value="1">Option 1</option>
             <option value="2">Option 2</option>
             <option value="3">Option 3</option>
@@ -2421,7 +2401,7 @@
     <qc-select id="qc-select-single-choice-search" enable-search>
         <label for="select-single-choice-search">Choix unique avec recherche</label>
         <select id="select-single-choice-search">
-            <option value="" selected>Choisissez une option</option>
+            <option value="" selected>Faire une sélection</option>
             <option value="1">Option 1</option>
             <option value="2">Option 2</option>
             <option value="3">Option 3</option>
@@ -2441,7 +2421,7 @@
         </select>
     </qc-select>
 
-    <qc-select id="qc-select-multiple-choices" multiple>
+    <qc-select id="qc-select-multiple-choices">
         <label for="select-multiple-choices">Choix multiples</label>
         <select multiple id="select-multiple-choices">
             <option value="1">Option 1</option>
@@ -2455,51 +2435,6 @@
         <label for="select-disabled">Désactivé</label>
         <select id="select-disabled" disabled></select>
     </qc-select>
-
-    <form id="dropdown-list-form">
-        <div class="qc-formfield-row">
-            <qc-select
-                    id="dropdown-list-restaurants"
-                    enable-search
-                    search-placeholder="Rechercher un type de restaurant"
-                    required
-                    invalid-text="Veuillez choisir un type de restaurant."
-            >
-                <label for="dropdown-list-restaurants-select">Type de restaurant</label>
-                <select id="dropdown-list-restaurants-select">
-                    <option value="">Type de restaurant</option>
-                    <option value="Pizzeria">Pizzeria</option>
-                    <option value="Pâtisserie">Pâtisserie</option>
-                    <option value="Steakhouse">Steakhouse</option>
-                    <option value="Bar">Bar</option>
-                    <option value="Casse-croûte">Casse-croûte</option>
-                    <option value="Boîte à pâtes">Boîte à pâtes</option>
-                    <option value="Restaurant à burgers">Restaurant à burgers</option>
-                </select>
-            </qc-select>
-
-            <qc-select
-                    id="dropdown-list-regions"
-                    placeholder="Sélectionner une région"
-                    enable-search
-                    search-placeholder="Rechercher les régions"
-            >
-                <label for="dropdown-list-regions-select">Régions desservies</label>
-                <select id="dropdown-list-regions-select" multiple>
-                    <option value="Capitale-nationale">Capitale-nationale</option>
-                    <option value="Centre-du-Québec" selected>Centre-du-Québec</option>
-                    <option value="Montérégie" selected>Montérégie</option>
-                    <option value="Outaouais">Outaouais</option>
-                    <option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</option>
-                    <option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</option>
-                    <option value="Nord-du-Québec">Nord-du-Québec</option>
-                    <option value="Bas-Saint-Laurent">Bas-Saint-Laurent</option>
-                </select>
-            </qc-select>
-        </div>
-
-        <button type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
-    </form>
 
     <script>
         const dropdownListForm = document.getElementById("dropdown-list-form");
@@ -2572,12 +2507,6 @@
             </td>
         </tr>
         <tr>
-            <td>value</td>
-            <td>Tableau de chaîne de caractères</td>
-            <td></td>
-            <td>Valeur(s) sélectionnée(s) dans la liste déroulante</td>
-        </tr>
-        <tr>
             <td>enable-search</td>
             <td>na</td>
             <td>na</td>
@@ -2619,7 +2548,7 @@
             <td>Texte</td>
             <td>""</td>
             <td>
-                Texte d'espace réservé de la boîte de la liste déroulante
+                <i>Placeholder</i> de la boîte de la liste déroulante
                 <br> N.B. : Si une option a une valeur vide (<code>value=""</code>), l'attribut <code>placeholder</code>
                 prend le libellé de cette option.
                 Voir l'exemple de <a href="#qc-select-single-choice">liste déroulante avec choix unique</a>.
@@ -2629,7 +2558,7 @@
             <td>search-placeholder</td>
             <td>Texte</td>
             <td>""</td>
-            <td>Texte d'espace réservé du champ de recherche</td>
+            <td><i>Placeholder</i> du champ de recherche</td>
         </tr>
         <tr>
             <td>no-options-message</td>
@@ -2650,7 +2579,28 @@
     </table>
 </div>
 
-<h3>Zone d'ajout de contenu HTML</h3>
+<h5>Propriété JS</h5>
+
+<div class="table-overflow">
+    <table class="qc-table qc-striped component-attributes-description">
+        <thead>
+        <tr>
+            <th>Nom</th>
+            <th>Type</th>
+            <th>Description</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>value</td>
+                <td>Tableau de chaîne de caractères</td>
+                <td>Valeur(s) sélectionnée(s) dans la liste déroulante</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<h5>Zone d'ajout de contenu HTML</h5>
 <p>Ce composant ne comporte qu'une seule zone d'ajout de contenu.</p>
 
     <hr/>
