Formulaires - ajustements de la doc (titre et ordre)

--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,10 @@
     <li>
       <a href='#formulaires'>Formulaires</a>
       <ul>
-        <li><a href="#radios-checkboxes">Boutons radios et cases à cocher</a>
+        <li><a href="#radios-checkboxes">Boutons radio, cases à cocher et boutons de sélection</a>
           <ul>
-            <li><a href="#checkbox">Case à cocher unique</a></li>
             <li><a href="#choice-group">Groupe de boutons radio et de cases à cocher</a></li>
+            <li><a href="#checkbox">Case à cocher unique</a></li>
             <li><a href="#selection-button">Boutons de sélection</a></li>
           </ul>
         </li>
@@ -741,7 +741,7 @@
 </qc-doc-exemple>
     <hr/>
     <h2 id="paragraphes">Paragraphes</h2>
-<qc-doc-exemple caption="Exemple de paragraphe">
+<qc-doc-exemple caption="Exemple de paragraphes">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin iaculis sapien vitae tempor porttitor.
         Morbi tincidunt lorem et neque commodo varius. Suspendisse pretium risus sit amet nisi tempus, ut
         euismod ex euismod. Nulla eget ullamcorper justo. Quisque cursus eget ex eget cursus. Suspendisse
@@ -1381,94 +1381,6 @@
     <hr/>
     <h2 id="formulaires">Formulaires</h2>
     <h3 id="radios-checkboxes">Boutons radios et cases à cocher</h3>
-    
-
-<h4 id="checkbox">Case à cocher unique (qc-checkbox)</h4>
-
-<qc-doc-exemple caption="Exemple d’une case à cocher obligatoire.">
-  <form id="exemple-tos-form">
-    <qc-checkbox required >
-      <label>
-        <input type="checkbox"
-               name="consentement"
-               value="oui"
-               id="consentement"
-        />
-        <span >J’accepte les conditions d’utilisation</span>
-      </label>
-    </qc-checkbox>
-
-    <button class="qc-button qc-primary qc-compact"
-            type="submit">
-      S'inscrire
-    </button>
-  </form>
-
-  <script>
-    const tosForm = document.getElementById("exemple-tos-form");
-    const consentement = document.getElementById("consentement");
-    tosForm.addEventListener("submit", (event) => {
-      event.preventDefault();
-      if(consentement.checked) {
-        const formData = new FormData(event.target);
-        let alertParts = ["Formulaire soumis avec les données suivantes :"];
-        for (const [key, value] of formData.entries()) {
-          alertParts.push(`${key} : ${value}`);
-        }
-        alert(alertParts.join("\n"));
-      } else {
-        consentement.closest('qc-checkbox').invalid = true;
-      }
-    })
-  </script>
-</qc-doc-exemple>
-
-
-<h4>Attributs de qc-checkbox</h4>
-<div class="table-overflow">
-  <table class="qc-table qc-striped component-attributes-description">
-    <thead>
-    <tr>
-      <th>Nom</th>
-      <th>Valeur attendue</th>
-      <th>Valeur par défaut</th>
-      <th>Description</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td>compact</td>
-      <td>na</td>
-      <td>na</td>
-      <td>Affiche la case à cocher au format compact</td>
-    </tr>
-    <tr>
-      <td>required</td>
-      <td>na</td>
-      <td>na</td>
-      <td>Ajoute un astérisque pour indiquer que la sélection est obligatoire.</td>
-    </tr>
-    <tr>
-      <td>invalid</td>
-      <td>na</td>
-      <td>na</td>
-      <td>
-          Affiche le message d’erreur (voir l’exemple de case à cocher obligatoire).
-        <br/>NB : `invalid` prend automatiquement la valeur `false` dès que la case est cochée.
-      </td>
-    </tr>
-    <tr>
-      <td>invalid-text</td>
-      <td>Texte</td>
-      <td>"Le champ {nom du champ} est obligatoire" ou "{field name} field is required"</td>
-      <td>Message d’erreur à afficher lorsque la case est invalide.</td>
-    </tr>
-    </tbody>
-  </table>
-</div>
-
-
-    <hr/>
     <h4 id="choice-group">Groupe de boutons radio et de cases à cocher (qc-choice-group)</h4>
 
 <h5>Exemples</h5>
@@ -1753,6 +1665,94 @@
 <h5>Zone d’ajout de contenu HTML</h5>
 
 <p>Ce composant ne comporte qu'une seule zone d'ajout de contenu par défaut.</p>
+
+
+    <hr/>
+    
+
+<h4 id="checkbox">Case à cocher unique (qc-checkbox)</h4>
+
+<qc-doc-exemple caption="Exemple d’une case à cocher obligatoire.">
+  <form id="exemple-tos-form">
+    <qc-checkbox required >
+      <label>
+        <input type="checkbox"
+               name="consentement"
+               value="oui"
+               id="consentement"
+        />
+        <span >J’accepte les conditions d’utilisation</span>
+      </label>
+    </qc-checkbox>
+
+    <button class="qc-button qc-primary qc-compact"
+            type="submit">
+      S'inscrire
+    </button>
+  </form>
+
+  <script>
+    const tosForm = document.getElementById("exemple-tos-form");
+    const consentement = document.getElementById("consentement");
+    tosForm.addEventListener("submit", (event) => {
+      event.preventDefault();
+      if(consentement.checked) {
+        const formData = new FormData(event.target);
+        let alertParts = ["Formulaire soumis avec les données suivantes :"];
+        for (const [key, value] of formData.entries()) {
+          alertParts.push(`${key} : ${value}`);
+        }
+        alert(alertParts.join("\n"));
+      } else {
+        consentement.closest('qc-checkbox').invalid = true;
+      }
+    })
+  </script>
+</qc-doc-exemple>
+
+
+<h4>Attributs de qc-checkbox</h4>
+<div class="table-overflow">
+  <table class="qc-table qc-striped component-attributes-description">
+    <thead>
+    <tr>
+      <th>Nom</th>
+      <th>Valeur attendue</th>
+      <th>Valeur par défaut</th>
+      <th>Description</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>compact</td>
+      <td>na</td>
+      <td>na</td>
+      <td>Affiche la case à cocher au format compact</td>
+    </tr>
+    <tr>
+      <td>required</td>
+      <td>na</td>
+      <td>na</td>
+      <td>Ajoute un astérisque pour indiquer que la sélection est obligatoire.</td>
+    </tr>
+    <tr>
+      <td>invalid</td>
+      <td>na</td>
+      <td>na</td>
+      <td>
+          Affiche le message d’erreur (voir l’exemple de case à cocher obligatoire).
+        <br/>NB : `invalid` prend automatiquement la valeur `false` dès que la case est cochée.
+      </td>
+    </tr>
+    <tr>
+      <td>invalid-text</td>
+      <td>Texte</td>
+      <td>"Le champ {nom du champ} est obligatoire" ou "{field name} field is required"</td>
+      <td>Message d’erreur à afficher lorsque la case est invalide.</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
 
 
     <hr/>
