--- a/src/sdg/bases/typography/_paragraph.html
+++ b/src/sdg/bases/typography/_paragraph.html
@@ -1,5 +1,5 @@
 <h2 id="paragraphes">Paragraphes</h2>
-<qc-doc-exemple caption="Exemple de paragraphe">
+<qc-doc-exemple caption="Exemple de paragraphes">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin iaculis sapien vitae tempor porttitor.
         Morbi tincidunt lorem et neque commodo varius. Suspendisse pretium risus sit amet nisi tempus, ut
         euismod ex euismod. Nulla eget ullamcorper justo. Quisque cursus eget ex eget cursus. Suspendisse
