Formulaires - ajustements de la doc (titre et ordre)

--- a/public/index.html
+++ b/public/index.html
@@ -762,7 +762,7 @@
 <div class="font-titles">
   <h3><strong>Roboto</strong></h3>
   <qc-doc-exemple id="font-roboto"
-                  caption="Exemple de texte en roboto, avec différentes graisses."
+                  caption="Exemple de texte en Roboto, avec différentes graisses."
   >
     <div style="font-family: var(--qc-font-family-header);">
       <p style="font-weight:var(--qc-font-weight-header-regular);">
@@ -784,7 +784,7 @@
 <div>
   <h3><strong>Open Sans</strong></h3>
   <qc-doc-exemple id="font-open-sans"
-                  caption="Exemple de texte en open sans, avec différentes graisses."
+                  caption="Exemple de texte en Open Sans, avec différentes graisses."
   >
     <div style="font-family: var(--qc-font-family-content);">
       <p style="font-weight:var(--qc-font-weight-content-regular);">
@@ -927,7 +927,7 @@
 <h3>Exemples</h3>
 
 <qc-doc-exemple id="exemple-avis-neutre"
-                caption="Exemple d’avis neutres"
+                caption="Exemple d’avis complémentaires"
 >
   <qc-notice type="advice"
              icon="ligth-bulb"
@@ -954,12 +954,12 @@
                 caption="Exemple d’avertissement (avec et sans <i><code>slot</code></i>)"
 >
   <qc-notice type="warning"
-             title="Migration des <i>contenus</i>"
+             title="Migration des contenus"
              content="Les contenus seront transférés dans Québec.ca à partir du 16 février et le site sera fermé le 20 avril.">
   </qc-notice>
 
   <qc-notice type="warning">
-    <h2>Migration des <i>contenus</i></h2>
+    <h2>Migration des contenus</h2>
     <p>Les contenus seront transférés dans Québec.ca à partir du 16 février et le site sera fermé le 20
       avril.</p>
   </qc-notice>
@@ -983,7 +983,7 @@
                 caption="Exemple d’avis d’erreur"
 >
   <qc-notice type="error"
-             title="Des erreurs sont présentes dans le formulaire.">
+             title="Des erreurs sont présentes dans le formulaire :">
     <ul>
       <li>
         <a href="javascript:;">Le champ « Nom de famille » est obligatoire ;</a>
@@ -1067,7 +1067,7 @@
     <hr/>
     <h2 id="search-bar">Barre de recherche</h2>
 <h3>Exemples</h3>
-<qc-doc-exemple caption="Exemple de barre de recherche lançant une recherche dans quebec.ca">
+<qc-doc-exemple caption="Exemple de barre de recherche">
   <form action="http://www.quebec.ca/resultats-de-recherche">
     <qc-search-bar name="tx_solr[q]"></qc-search-bar>
   </form>
@@ -1388,7 +1388,7 @@
   Les groupes d'éléments de choix sont également disponibles sous forme de <a href="#selection-button">boutons de sélection</a>.
 </p>
 
-<qc-doc-exemple caption="Exemple d’un groupe de cases à cocher avec différents états">
+<qc-doc-exemple caption="Exemple de groupes de boutons radio et de cases à cocher avec différents états">
   <qc-choice-group legend="Sélectionnez vos options"
                    name="options-multiples"
   >
