--- a/src/sdg/bases/typography/_font.html
+++ b/src/sdg/bases/typography/_font.html
@@ -2,7 +2,7 @@
 <div class="font-titles">
   <h3><strong>Roboto</strong></h3>
   <qc-doc-exemple id="font-roboto"
-                  caption="Exemple de texte en roboto, avec différentes graisses."
+                  caption="Exemple de texte en Roboto, avec différentes graisses."
   >
     <div style="font-family: var(--qc-font-family-header);">
       <p style="font-weight:var(--qc-font-weight-header-regular);">
@@ -24,7 +24,7 @@
 <div>
   <h3><strong>Open Sans</strong></h3>
   <qc-doc-exemple id="font-open-sans"
-                  caption="Exemple de texte en open sans, avec différentes graisses."
+                  caption="Exemple de texte en Open Sans, avec différentes graisses."
   >
     <div style="font-family: var(--qc-font-family-content);">
       <p style="font-weight:var(--qc-font-weight-content-regular);">
