--- a/public/index.html
+++ b/public/index.html
@@ -350,18 +350,14 @@
         <qc-icon type="success" color="pink-regular" size="xs"></qc-icon>
         <qc-icon type="success" color="blue-piv" size="sm"></qc-icon>
         <qc-icon type="success" color="grey-dark" size="md"></qc-icon>
-        <qc-icon type="success" color="purple" size="lg"></qc-icon>
+        <qc-icon type="success" color="blue-regular" size="lg"></qc-icon>
         <qc-icon type="success" color="success" size="xl"></qc-icon>
     </div>
     <div>
-        <qc-icon type="arrow-up"  size="lg"></qc-icon>
-        <qc-icon type="arrow-up"  size="lg" rotate="45"></qc-icon>
-        <qc-icon type="arrow-up"  size="lg" rotate="90"></qc-icon>
-        <qc-icon type="arrow-up"  size="lg" rotate="135"></qc-icon>
-        <qc-icon type="arrow-up"  size="lg" rotate="180"></qc-icon>
-        <qc-icon type="arrow-up"  size="lg" rotate="225"></qc-icon>
         <qc-icon type="arrow-up"  size="lg" rotate="-90"></qc-icon>
-        <qc-icon type="arrow-up"  size="lg" rotate="-45"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="90"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="180"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg"></qc-icon>
     </div>
 
 
