Pied de page PIV - ajustement de la doc

--- a/public/index.html
+++ b/public/index.html
@@ -1305,13 +1305,13 @@
 <qc-doc-exemple caption="Exemples de boutons avec icône.<br/>NB: voir la section <a href='#icons'>Icônes</a> pour plus de détails concernant le composant <code>qc-icon</code>.">
     <div>
         <button class="qc-button qc-primary">
-            <qc-icon type="plus"></qc-icon>
-            Ajouter
+            <qc-icon type="arrow-up" rotate="-90"></qc-icon>
+            Précédent
         </button>
 
         <button class="qc-button qc-primary">
-            Information
-            <qc-icon type="information"></qc-icon>
+            Suivant
+            <qc-icon type="arrow-up" rotate="90"></qc-icon>
         </button>
     </div>
 </qc-doc-exemple>
@@ -3018,10 +3018,8 @@
   >
     <nav aria-label="Navigation du pied de page">
       <ul>
-        <li><a href="/">Accessibilité</a></li>
-        <li><a href="/">Plan du site</a></li>
-        <li><a href="/">S'informer sur clicSÉQUR - Citoyens</a></li>
-        <li><a href="/">FAQ</a></li>
+        <li><a href="/">Accès à l’information</a></li>
+        <li><a href="/">Politique de confidentialité</a></li>
       </ul>
     </nav>
     <qc-external-link slot="copyright">
