Commutateur - ajustement de la doc

--- a/public/index.html
+++ b/public/index.html
@@ -2373,7 +2373,7 @@
     </tr>
     <tr>
         <td>max-width</td>
-        <td>"fit-content", "[x]px", "[x]rem", "[x]em", "[x]%", où [x] est un nombre</td>
+        <td>Toute valeur acceptée par la directive css <code>max-width</code></td>
         <td>"fit-content"</td>
         <td>Largeur maximale des commutateurs dans le groupe</td>
     </tr>
