Ajout de classe qc-button-group dans la liste

--- a/public/index.html
+++ b/public/index.html
@@ -1355,6 +1355,7 @@
 
 <h3>Classes CSS</h3>
 
+<h4>Classes de boutons</h4>
 <div class="table-overflow">
     <table class="qc-table qc-striped">
         <thead>
@@ -1395,6 +1396,28 @@
         <tr>
             <td><code>qc‑simple</code></td>
             <td>Bouton sans fond ni bordure.</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<h4>Classes pour le contenant parent d'un groupe de boutons</h4>
+<div class="table-overflow">
+    <table class="qc-table qc-striped">
+        <thead>
+        <tr>
+            <th>Classe / Attribut</th>
+            <th>Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><code>qc‑button-group</code></td>
+            <td>Gère les espacements horizontaux entre les boutons en groupe</td>
+        </tr>
+        <tr>
+            <td><code>qc‑compact</code></td>
+            <td>Espacements au format compact des boutons en groupe</td>
         </tr>
         </tbody>
     </table>
