Ajustement des fichiers de test de boutons

--- a/public/index.html
+++ b/public/index.html
@@ -1301,7 +1301,7 @@
         </div>
     </div>
 
-    <div>
+    <div class="qc-button-group">
         <button class="qc-button qc-simple">
             <qc-icon type="information"></qc-icon>
             Action
@@ -1312,7 +1312,7 @@
             Action
         </button>
     </div>
-    <div>
+    <div class="qc-button-group qc-compact">
         <button class="qc-button qc-simple qc-compact">
             <qc-icon type="information"></qc-icon>
             Action
