--- a/public/index.html
+++ b/public/index.html
@@ -2815,6 +2815,7 @@
 >
   <div id="pivEnteteExempleRecherchePersonnalisee">
     <qc-piv-header title-text="Titre du site ou du service"
+                   title-url=""
                    alt-logo="Accédez à Québec.ca"
                    enable-search="true"
                    show-search="true"
