--- a/public/index.html
+++ b/public/index.html
@@ -848,11 +848,14 @@
 </p>
 
 <qc-doc-exemple id="alert-warning"
-                caption="Exemple d’alerte jaune">
+                caption="Exemple d’alerte jaune masquable. Elle reste masquée après rafraîchissement de la page pendant 5 secondes.">
   <qc-alert id="alerte-masquable"
             type="warning"
             maskable="true"
             content="Alerte jaune d’importance élevée"
+            persist-hidden
+            persistence-ttl="5"
+            persistence-key="hash-1234"
   >
   </qc-alert>
 </qc-doc-exemple>
@@ -889,12 +892,6 @@
       <td>Type de l’alerte : s'il s'agit d’une alerte bleue ou jaune</td>
     </tr>
     <tr>
-      <td>maskable</td>
-      <td>"true" ou "false"</td>
-      <td>"true"</td>
-      <td>Afficher le bouton de fermeture de l’alerte</td>
-    </tr>
-    <tr>
       <td>content</td>
       <td>Texte</td>
       <td>Chaine vide</td>
@@ -914,6 +911,31 @@
         qc-container-fluid)
       </td>
     </tr>
+      <tr>
+          <td>maskable</td>
+          <td>"true" ou "false"</td>
+          <td>"true"</td>
+          <td>Afficher le bouton de fermeture de l’alerte</td>
+      </tr>
+      <tr>
+          <td>persist-hidden</td>
+          <td>na</td>
+          <td></td>
+          <td>Masque l'alerte de façon persistente une fois qu'elle est masquée par l'internaute, c-à-d. qu'elle reste masquée lorsque l'utilisateur rafraîchit la page.</td>
+      </tr>
+    <tr>
+      <td>persistence-ttl</td>
+      <td>Nombre de secondes</td>
+      <td>604 800 (c-à-d. une semaine)</td>
+      <td>Durée de la persistence, en secondes</td>
+    </tr>
+    <tr>
+      <td>persistence-key</td>
+      <td>Chaîne de caractère</td>
+      <td>Id de l'élément, valeur nulle sinon</td>
+      <td>Clé pour le stockage locale (<code>Window.localStorage</code>). Si non défini, l'id de l'élément sera utilisé. Si celui-ci non plus n'est pas défini, la persistence du masquage n'aura pas lieu.</td>
+    </tr>
+
   </table>
 </div>
 
